# TinyRasputin

./: .env  .gitignore  Cargo-debug.toml  Cargo-header.toml  Cargo-release.toml  Cargo.toml  README.md  build.sh  commands-template.json  commands.json  justfile  package-justfile  prob_engine.txt  run.sh  test_analysis.txt
.github/workflows/: rust.yml
benches/: engine_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: showdown_fuzz.rs
src/: bots.rs  engine.rs  lib.rs  main.rs  skeleton.rs
src/bots/: empty.rs  lesson1.rs  lesson2.rs  test.rs  tourney.rs
src/bots/tourney/: v1.rs
src/engine/: guess.rs  probability.rs  relations.rs  showdown.rs
src/skeleton/: actions.rs  bot.rs  cards.rs  runner.rs  states.rs  thread_pool.rs
