[package]
name = "tinyrasputin"
version = "1.1.0"
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
clap = "2.33"
rand = "0.7"
itertools = "0.8"
num-format = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "engine_bench"
harness = false